--- a/client/src/styles/index.scss
+++ b/client/src/styles/index.scss
@@ -4,3 +4,10 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
+
+@font-face {
+  font-family: 'Indie Flower';
+  src:
+    local('Indie Flower'),
+    url()
+}
